Fix a few bugs found in dpv3 implementation  (#58)
* resolve a11y issues 

don't use aria labels needlessly as they throw off screen readers
add fix for header contrast issue in dark mode

* enforce proper label for Switch

* update badges

* allow user to not show Pagination

* hide toolbar when table is readonly

* remove buggy css

* do not show filter option unless user asks for column filtering

* add (proper) fix for header contrast issue in dark mode

--- a/src/components/Table/Table_shim.css
+++ b/src/components/Table/Table_shim.css
@@ -6,6 +6,17 @@
   padding-right: 0px;
   margin-left: -12px;
 }
+@media (prefers-color-scheme: light) {
+  :root .neo-dynamic .neo-table th button {
+    color: black;
+  }
+}
+@media (prefers-color-scheme: dark) {
+  :root .neo-dynamic .neo-table th button,
+  :root .neo-dark .neo-table th button {
+    color: white;
+  }
+}
 
 .neo-table th button span {
   height: auto;
@@ -23,4 +34,10 @@
 
 .neo-table-separator td {
   border-bottom: 1px solid #f1f1f1;
+}
+
+/* HACK: putting hack in place while waiting on update to css-lib */
+.neo-pagination__row .neo-pagination .neo-pagination__list li {
+  height: 42px;
+  width: 42px;
 }
